# sshman

./: .gitignore  CMakeLists.txt
src/: auth.cpp  auth.h  cmd.cpp  cmd.h  config.cpp  config.h  helpers.cpp  helpers.h  sshman.cpp
